--- a/app.wxss
+++ b/app.wxss
@@ -11,6 +11,15 @@
 } 
 .app-container{
   height: 100%;
+  font-size: 16px;
+}
+.public-top-title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  padding: 0 20px;
+  font-size: 1.2rem;
 }
 
 .public-center{
