--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,24 +1,39 @@
 <!--pages/home/home.wxml-->
 <view class="app-container">
-  <view>
-    <mp-row>
-      <mp-col wx:for="{{[1,2,3]}}" wx:for-index="index" wx:for-item="item" wx:key="index" span="{{24/3}}"
-        class="public-center">
-        {{index}}:{{item}}
-      </mp-col>
-    </mp-row>
+  <view class="public-top-title">
+    <view>{{companyName}}</view>
+    <view>{{userName}}</view>
   </view>
-  <view>
-    {{ date1 }}
+  <view class="public-top-operation">
+    <view wx:for="{{operationNavArr}}" wx:for-index="index" wx:for-item="item" wx:key="index"
+      class="public-top-operation-item" bindtap="operationJump" data-params="{{item}}">
+      <image src="{{item.icon}}" />
+      <view>{{item.name}}</view>
+    </view>
   </view>
-  <view>
-    <include src="./../component/A/a.wxml"></include>
+  <view class="public-central-collection">
+    <view class="public-central-collection-title">
+      采集发票
+    </view>
+    <view wx:for="{{collectionTypeArr}}" wx:for-index="index" wx:for-item="item" wx:key="index"
+      class="public-central-collection-item">
+      <image src="{{item.icon}}" />
+      <view>{{item.name}}</view>
+    </view>
   </view>
-  <import src="./../component/A/a.wxml"></import>
-  <view>
-    <template is='a'></template>
-  </view>
-  <view>
-    <include src="./../component/B/b.wxml"></include>
+  <view class="public-bottom-head">
+    <view class="public-bottom-head-title">
+      <view>发票抬头</view>
+      <view class="public-bottom-head-title-right">
+        <image src="../../images/common/qianjin.png"></image>
+        抬头管理
+      </view>
+    </view>
+    <view class="public-bottom-head-add">
+      <view class="public-bottom-head-add-operation">
+        <image src="../../images/common/tianjia.png"></image>
+        添加发票抬头
+      </view>
+    </view>
   </view>
 </view>
