--- a/pages/home/detail/detail.wxml
+++ b/pages/home/detail/detail.wxml
@@ -2,126 +2,258 @@
 <view class="app-container">
   <view class="public-detail-content">
     <view class="public-detail-body">
-      <view class="public-detail-body-content">
-        <view class="public-detail-body-title">增值税普通电子发票</view>
-        <view>
-          <label>发票代码：</label>
-          <span>1589686542</span>
-        </view>
-        <view>
-          <label>发票号码：</label>
-          <span>85693524</span>
-        </view>
-        <view>
-          <label>校验码：</label>
-          <span>856745</span>
-        </view>
-        <view class="my-divider"></view>
-        <van-collapse value="{{ activeNames }}" bind:change="onChange">
-          <van-collapse-item name="1">
-            <view slot="title">
-              <label>销方名称：</label>
-              <span>广州众智汇科技</span>
-              <van-icon name="question-o" />
-            </view>
-            <view>
-              <label>销方税号：</label>
-              <span>11111111111111111111111</span>
-            </view>
-            <view>
-              <label>销方地址：</label>
-              <span>11111111111111111111111</span>
-            </view>
-            <view>
-              <label>销方银行：</label>
-              <span>11111111111111111111111</span>
-            </view>
-          </van-collapse-item>
-          <van-collapse-item name="2">
-            <view slot="title">
-              <label>购方名称：</label>
-              <span>广州众智汇科技</span>
-              <van-icon name="question-o" />
-            </view>
-            <view>
-              <label>购方税号：</label>
-              <span>11111111111111111111111</span>
-            </view>
-            <view>
-              <label>购方地址：</label>
-              <span>11111111111111111111111</span>
-            </view>
-            <view>
-              <label>购方银行：</label>
-              <span>11111111111111111111111</span>
-            </view>
-          </van-collapse-item>
-        </van-collapse>
-        <view class="my-divider" v-if="isCurrInvType"></view>
-
-        <view>
-          <label>开票日期：</label>
-          <span>{{detailForm.invDate}}</span>
-        </view>
-        <view v-if="!isCurrInvType">
-          <label>价税合计：</label>
-          <span>{{detailForm.totalAmount}}</span>
-        </view>
-        <van-collapse value="{{ activeNames }}" bind:change="onChange">
-          <van-collapse-item name="3">
-            <view slot="title">
+      <block wx:if="{{invoiceIndex != null && invoiceIdArr}}">
+        <swiper class="my-swiper" bindchange="swiperChange" current="{{invoiceIndex - 1}}" style="height: 100%;">
+          <swiper-item class="my-swiper-item" wx:for="{{invoiceIdArr}}" wx:key="*this" style="overflow: auto;">
+            <view class="public-detail-body-content">
+              <view class="public-detail-body-title">增值税普通电子发票</view>
               <view>
+                <label>发票代码：</label>
+                <span>1589686542</span>
+              </view>
+              <view>
+                <label>发票号码：</label>
+                <span>85693524</span>
+              </view>
+              <view>
+                <label>校验码：</label>
+                <span>856745</span>
+              </view>
+              <view class="my-divider"></view>
+              <van-collapse value="{{ activeNames }}" bind:change="onChange">
+                <van-collapse-item name="1">
+                  <view slot="title">
+                    <label>销方名称：</label>
+                    <span>广州众智汇科技</span>
+                    <van-icon name="question-o" />
+                  </view>
+                  <view>
+                    <label>销方税号：</label>
+                    <span>11111111111111111111111</span>
+                  </view>
+                  <view>
+                    <label>销方地址：</label>
+                    <span>11111111111111111111111</span>
+                  </view>
+                  <view>
+                    <label>销方银行：</label>
+                    <span>11111111111111111111111</span>
+                  </view>
+                </van-collapse-item>
+                <van-collapse-item name="2">
+                  <view slot="title">
+                    <label>购方名称：</label>
+                    <span>广州众智汇科技</span>
+                    <van-icon name="question-o" />
+                  </view>
+                  <view>
+                    <label>购方税号：</label>
+                    <span>11111111111111111111111</span>
+                  </view>
+                  <view>
+                    <label>购方地址：</label>
+                    <span>11111111111111111111111</span>
+                  </view>
+                  <view>
+                    <label>购方银行：</label>
+                    <span>11111111111111111111111</span>
+                  </view>
+                </van-collapse-item>
+              </van-collapse>
+              <view class="my-divider" v-if="isCurrInvType"></view>
+
+              <view>
+                <label>开票日期：</label>
+                <span>{{detailForm.invDate}}</span>
+              </view>
+              <view v-if="!isCurrInvType">
                 <label>价税合计：</label>
                 <span>{{detailForm.totalAmount}}</span>
               </view>
-            </view>
+              <van-collapse value="{{ activeNames }}" bind:change="onChange">
+                <van-collapse-item name="3">
+                  <view slot="title">
+                    <view>
+                      <label>价税合计：</label>
+                      <span>{{detailForm.totalAmount}}</span>
+                    </view>
+                  </view>
 
-            <view>
-              <view class="tr">
-                <view>金额</view>
-                <view>税率</view>
-                <view>税额</view>
+                  <view>
+                    <view class="tr">
+                      <view>金额</view>
+                      <view>税率</view>
+                      <view>税额</view>
+                    </view>
+                    <view class="tr">
+                      <view>111</view>
+                      <view>111</view>
+                      <view>111</view>
+                    </view>
+                  </view>
+                </van-collapse-item>
+              </van-collapse>
+              <view class="my-divider"></view>
+              <view>
+                <label>费用类型：</label>
+                <span>费用类型</span>
               </view>
-              <view class="tr">
-                <view>111</view>
-                <view>111</view>
-                <view>111</view>
+              <view class="my-divider"></view>
+              <view>
+                <label>报销状态：</label>
+                <span>报销状态（待加）</span>
+              </view>
+              <view>
+                <label>发票真伪：</label>
+                <span>真发票</span>
+              </view>
+              <view>
+                <label>备注用途：</label>
+                <span>{{detailForm.note}}</span>
+              </view>
+              <view>
+                <label>所属票夹：</label>
+                <span>{{detailForm.fileName}}</span>
+              </view>
+              <view class="my-divider"></view>
+              <view>
+                <label>添加时间：</label>
+                <span>{{detailForm.createTime}}</span>
+              </view>
+              <view class="my-divider"></view>
+              <view class="public-circular-content">
+                <view class="public-circular" wx:for="{{circularNum}}" wx:key="index"></view>
               </view>
             </view>
-          </van-collapse-item>
-        </van-collapse>
-        <view class="my-divider"></view>
-        <view>
-          <label>费用类型：</label>
-          <span>费用类型</span>
+          </swiper-item>
+        </swiper>
+      </block>
+      <block wx:else>
+        <view class="public-detail-body-content">
+          <view class="public-detail-body-title">增值税普通电子发票</view>
+          <view>
+            <label>发票代码：</label>
+            <span>1589686542</span>
+          </view>
+          <view>
+            <label>发票号码：</label>
+            <span>85693524</span>
+          </view>
+          <view>
+            <label>校验码：</label>
+            <span>856745</span>
+          </view>
+          <view class="my-divider"></view>
+          <van-collapse value="{{ activeNames }}" bind:change="onChange">
+            <van-collapse-item name="1">
+              <view slot="title">
+                <label>销方名称：</label>
+                <span>广州众智汇科技</span>
+                <van-icon name="question-o" />
+              </view>
+              <view>
+                <label>销方税号：</label>
+                <span>11111111111111111111111</span>
+              </view>
+              <view>
+                <label>销方地址：</label>
+                <span>11111111111111111111111</span>
+              </view>
+              <view>
+                <label>销方银行：</label>
+                <span>11111111111111111111111</span>
+              </view>
+            </van-collapse-item>
+            <van-collapse-item name="2">
+              <view slot="title">
+                <label>购方名称：</label>
+                <span>广州众智汇科技</span>
+                <van-icon name="question-o" />
+              </view>
+              <view>
+                <label>购方税号：</label>
+                <span>11111111111111111111111</span>
+              </view>
+              <view>
+                <label>购方地址：</label>
+                <span>11111111111111111111111</span>
+              </view>
+              <view>
+                <label>购方银行：</label>
+                <span>11111111111111111111111</span>
+              </view>
+            </van-collapse-item>
+          </van-collapse>
+          <view class="my-divider" v-if="isCurrInvType"></view>
+
+          <view>
+            <label>开票日期：</label>
+            <span>{{detailForm.invDate}}</span>
+          </view>
+          <view v-if="!isCurrInvType">
+            <label>价税合计：</label>
+            <span>{{detailForm.totalAmount}}</span>
+          </view>
+          <van-collapse value="{{ activeNames }}" bind:change="onChange">
+            <van-collapse-item name="3">
+              <view slot="title">
+                <view>
+                  <label>价税合计：</label>
+                  <span>{{detailForm.totalAmount}}</span>
+                </view>
+              </view>
+
+              <view>
+                <view class="tr">
+                  <view>金额</view>
+                  <view>税率</view>
+                  <view>税额</view>
+                </view>
+                <view class="tr">
+                  <view>111</view>
+                  <view>111</view>
+                  <view>111</view>
+                </view>
+              </view>
+            </van-collapse-item>
+          </van-collapse>
+          <view class="my-divider"></view>
+          <view>
+            <label>费用类型：</label>
+            <span>费用类型</span>
+          </view>
+          <view class="my-divider"></view>
+          <view>
+            <label>报销状态：</label>
+            <span>报销状态（待加）</span>
+          </view>
+          <view>
+            <label>发票真伪：</label>
+            <span>真发票</span>
+          </view>
+          <view>
+            <label>备注用途：</label>
+            <span>{{detailForm.note}}</span>
+          </view>
+          <view>
+            <label>所属票夹：</label>
+            <span>{{detailForm.fileName}}</span>
+          </view>
+          <view class="my-divider"></view>
+          <view>
+            <label>添加时间：</label>
+            <span>{{detailForm.createTime}}</span>
+          </view>
+          <view class="my-divider"></view>
+          <view class="public-circular-content">
+            <view class="public-circular" wx:for="{{circularNum}}" wx:key="index"></view>
+          </view>
         </view>
-        <view class="my-divider"></view>
-        <view>
-          <label>报销状态：</label>
-          <span>报销状态（待加）</span>
-        </view>
-        <view>
-          <label>发票真伪：</label>
-          <span>真发票</span>
-        </view>
-        <view>
-          <label>备注用途：</label>
-          <span>{{detailForm.note}}</span>
-        </view>
-        <view>
-          <label>所属票夹：</label>
-          <span>{{detailForm.fileName}}</span>
-        </view>
-        <view class="my-divider"></view>
-        <view>
-          <label>添加时间：</label>
-          <span>{{detailForm.createTime}}</span>
-        </view>
-        <view class="my-divider"></view>
-        <view class="public-circular-content">
-          <view class="public-circular" wx:for="{{circularNum}}" wx:key="index"></view>
-        </view>
-      </view>
+      </block>
+
+    </view>
+    <view class="page-number" wx:if="{{invoiceIndex != null && invoiceIdArr}}">
+      {{invoiceIndex}}/{{invoiceIdArr.length}}
     </view>
     <view class="public-detail-bottom">
       <button class="mini-btn" type="primary" size="mini" bindtap="editInvoice">编辑</button>
@@ -131,55 +263,57 @@
   </view>
   <!-- 修改页面 -->
   <page-container show="{{editPopupShow}}" position="center">
-  <view class="public-popup-content">
-    <view class="public-manual-content-form">
-      <mp-form id="manualForm" rules="{{rules}}" models="{{formData}}">
-        <mp-cells title="" footer="">
-          <mp-cell prop="invCode" title="票据类型" ext-class="" show-error>
-            <input data-field="invType" class="weui-input" disable="true"/>
-          </mp-cell>
-          <mp-cell prop="invCode" title="发票代码" ext-class="" show-error>
-            <input data-field="invCode" class="weui-input" placeholder="请输入发票代码" bindinput="formFieldChange"/>
-          </mp-cell>
-          <mp-cell prop="invNo" title="发票号码" ext-class="" show-error>
-            <input data-field="invNo" class="weui-input" placeholder="请输入发票号码" bindinput="formFieldChange"/>
-          </mp-cell>
-          <mp-cell prop="invDate" title="开票日期" ext-class="" show-error>
-            <picker data-field="date" mode="date" value="{{formData.invDate}}" placeholder="请选择开票日期" bindchange="invDateChange">
-              <view class="weui-input">{{formData.invDate}}</view>
-            </picker>
-          </mp-cell>
-          <mp-cell prop="totalAmountWithoutTax" title="不含税金额" ext-class="" show-error>
-            <input data-field="totalAmountWithoutTax" class="weui-input" placeholder="请输入不含税金额" bindinput="formFieldChange"/>
-          </mp-cell>
-          <mp-cell prop="checkCode" title="校验码" ext-class="" show-error>
-            <input data-field="checkCode" class="weui-input" placeholder="请输入校验码后六位" bindinput="formFieldChange"/>
-          </mp-cell>
-          <mp-cell prop="totalAmount" title="价税合计" ext-class="" show-error>
-            <input data-field="totalAmount" class="weui-input" placeholder="请输入价税合计" bindinput="formFieldChange"/>
-          </mp-cell>
-          <mp-cell prop="folder" title="所属票夹">
-            <picker bindchange="folderChange" value="{{folderIndex}}" range="{{folderArr}}">
-              <view class="weui-input">{{folderArr[folderIndex]}}</view>
-            </picker>
-          </mp-cell>
-          <mp-cell title="文件上传" prop="files">
-            <view class="my-weui-uploader__input-box" wx:for="{{formData.files}}" wx:for-index="index"
-              wx:for-item="item" wx:key="index" bindtap="previewImage" data-index="{{index}}">
-              <image src="{{item}}" mode="widthFix"></image>
-            </view>
-            <view class="weui-uploader__input-box" bindtap="selectFile">
+    <view class="public-popup-content">
+      <view class="public-manual-content-form">
+        <mp-form id="manualForm" rules="{{rules}}" models="{{formData}}">
+          <mp-cells title="" footer="">
+            <mp-cell prop="invCode" title="票据类型" ext-class="" show-error>
+              <input data-field="invType" class="weui-input" disable="true" />
+            </mp-cell>
+            <mp-cell prop="invCode" title="发票代码" ext-class="" show-error>
+              <input data-field="invCode" class="weui-input" placeholder="请输入发票代码" bindinput="formFieldChange" />
+            </mp-cell>
+            <mp-cell prop="invNo" title="发票号码" ext-class="" show-error>
+              <input data-field="invNo" class="weui-input" placeholder="请输入发票号码" bindinput="formFieldChange" />
+            </mp-cell>
+            <mp-cell prop="invDate" title="开票日期" ext-class="" show-error>
+              <picker data-field="date" mode="date" value="{{formData.invDate}}" placeholder="请选择开票日期"
+                bindchange="invDateChange">
+                <view class="weui-input">{{formData.invDate}}</view>
+              </picker>
+            </mp-cell>
+            <mp-cell prop="totalAmountWithoutTax" title="不含税金额" ext-class="" show-error>
+              <input data-field="totalAmountWithoutTax" class="weui-input" placeholder="请输入不含税金额"
+                bindinput="formFieldChange" />
+            </mp-cell>
+            <mp-cell prop="checkCode" title="校验码" ext-class="" show-error>
+              <input data-field="checkCode" class="weui-input" placeholder="请输入校验码后六位" bindinput="formFieldChange" />
+            </mp-cell>
+            <mp-cell prop="totalAmount" title="价税合计" ext-class="" show-error>
+              <input data-field="totalAmount" class="weui-input" placeholder="请输入价税合计" bindinput="formFieldChange" />
+            </mp-cell>
+            <mp-cell prop="folder" title="所属票夹">
+              <picker bindchange="folderChange" value="{{folderIndex}}" range="{{folderArr}}">
+                <view class="weui-input">{{folderArr[folderIndex]}}</view>
+              </picker>
+            </mp-cell>
+            <mp-cell title="文件上传" prop="files">
+              <view class="my-weui-uploader__input-box" wx:for="{{formData.files}}" wx:for-index="index"
+                wx:for-item="item" wx:key="index" bindtap="previewImage" data-index="{{index}}">
+                <image src="{{item}}" mode="widthFix"></image>
+              </view>
+              <view class="weui-uploader__input-box" bindtap="selectFile">
 
-            </view>
-            <!-- <mp-uploader bindfail="uploadError" bindsuccess="uploadSuccess" bindselect="selectFile" upload="{{uplaodFile}}"
+              </view>
+              <!-- <mp-uploader bindfail="uploadError" bindsuccess="uploadSuccess" bindselect="selectFile" upload="{{uplaodFile}}"
           max-count="5" title="图片上传"></mp-uploader> -->
-          </mp-cell>
-        </mp-cells>
-        <view class="weui-btn-area">
-          <button class="weui-btn public-width-100" type="primary" bindtap="submitManualForm">保存</button>
-        </view>
-      </mp-form>
+            </mp-cell>
+          </mp-cells>
+          <view class="weui-btn-area">
+            <button class="weui-btn public-width-100" type="primary" bindtap="submitManualForm">保存</button>
+          </view>
+        </mp-form>
+      </view>
     </view>
-  </view>
   </page-container>
 </view>
