--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -101,13 +101,14 @@
   font-size: 14px;
 }
 .my-cell{
-  margin: 5px 20px;
+  padding: 7px 20px;
   position: relative;
   font-size: 12px;
 }
 .my-cell+.my-cell::before{
   content: " ";
   position: absolute;
+  top: 0;
   left: 0;
   right: 0;
   height: 1px;
