--- a/pages/home/email/email.wxml
+++ b/pages/home/email/email.wxml
@@ -3,7 +3,7 @@
   <view class="public-email-content public-flex-content">
     <view class="public-email-content-body">
       <block wx:if="{{emailList.length > 0}}">
-        <van-swipe-cell wx:for="{{emailList}}" wx:key="*this" right-width="{{ 65 }}">
+        <van-swipe-cell wx:for="{{emailList}}" wx:key="index" right-width="{{ 65 }}" class="my-swipe-cell">
           <view class="public-content-item" bindtap="handleEditEmail" data-index="index">
             <view class="public-content-item-right">
               <view class="public-content-item-absolute" catchtap="importInvoice" data-index="index">导入发票</view>
