--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -113,7 +113,10 @@
   right: 0;
   height: 1px;
   background-color: rgb(235 237 240 / 51%);
-  z-index: 1;
+  /* z-index: 1; */
+}
+.weui-cells:after, .weui-cells:before {
+  z-index: 0!important;
 }
 
 .detail-item{
